# ChangeLog for dev-python/pypy3
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pypy3/ChangeLog,v 1.3 2014/11/09 08:29:14 mgorny Exp $

  09 Nov 2014; Michał Górny <mgorny@gentoo.org> pypy3-2.4.0.ebuild:
  Add keywords now that pypy3-bin packages are built.

  05 Nov 2014; Michał Górny <mgorny@gentoo.org> +files/1.9-distutils.unixccompil
  er.UnixCCompiler.runtime_library_dir_option.patch,
  +files/1.9-scripts-location.patch, +files/2.3.1-shared-lib.patch:
  Introduce initial ebuilds for PyPy3.

*pypy3-2.4.0 (05 Nov 2014)

  05 Nov 2014; Michał Górny <mgorny@gentoo.org> +files/1.9-distutils.unixccompil
  er.UnixCCompiler.runtime_library_dir_option.patch,
  +files/1.9-scripts-location.patch, +files/2.3.1-shared-lib.patch,
  +metadata.xml, +pypy3-2.4.0.ebuild:
  Introduce initial ebuilds for PyPy3.