@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pypy3
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pypy3/ChangeLog,v 1.3 2014/11/09 08:29:14 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pypy3/ChangeLog,v 1.4 2014/11/09 22:47:28 mgorny Exp $
+
+  09 Nov 2014; Michał Górny <mgorny@gentoo.org> pypy3-2.4.0.ebuild:
+  Improve/simplify interpreter choice cde using new eclass code.
 
   09 Nov 2014; Michał Górny <mgorny@gentoo.org> pypy3-2.4.0.ebuild:
   Add keywords now that pypy3-bin packages are built.
